--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Baptiste Wetterwald",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "blagues-api": "^2.1.1",
     "canvas": "^2.11.2",
     "canvas-gif": "^1.0.3",
@@ -17,6 +18,7 @@
     "discord.js": "^14.11.0",
     "dom-parser": "^0.1.6",
     "node-fetch": "^3.3.1",
+    "npm": "^10.0.0",
     "sqlite3": "^5.1.6"
   }
 }
